# bevy_image_config

./: Cargo.toml  README.md
assets/: spriteA.img_cfg  spriteA.img_cfg.ron
examples/: example.rs
src/: lib.rs
