[package]
name = "bevy_image_config"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "texture", "loading", "configuration", "games"]
categories = ["game-development", "graphics"]
repository = "https://github.com/ickshonpe/bevy_image_config"
description = "Bevy plugin that automatically configures image assets when they load"
readme = "README.md"

[dependencies]
bevy = {version = "0.8", features = ["bevy_asset", "render"] } 
bimap = "0.6.2"
wgpu = { version = "0.13.1" }
ron = "0.8.0"
serde = { version = "1.0.145", features = ["derive"] }
anyhow = "1.0.65"